# prisonerDilemmaGame

./: CMakeLists.txt  README.md  build.sh  main.cpp  to-do
dependencies/GLFW/: glfw3.h
src/: config.h  main.cpp
